**************
RECENT CHANGES
**************

======
1.77.0
======

* New script repository commands (by Christian Münch)
* Ability to add helpers by config - Issue #204 (by Christian Münch)
* Moved command registration out to dist config.
* Added new script variables
* Updated Symfony dependencies

======
1.76.0
======

* New commands dev:module:dependencies:on and dev:module:dependencies:from (by Dmitriy Zavalkin)
* Fixed issue #202 - Permission error on Nexcess servers
* Fixed issue #194 - Exported setup script with attribute uses incorrect Setup class (by Jonathan Day)
* Fixed issue #197 - Doesn't run when /tmp/magento/var exists and database is not created / tables missing
* Fixed issue #199 - Error with dev:module:rewrite:conflicts

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net