@@ -10,6 +10,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/console": "2.3.4",
+        "symfony/event-dispatcher": "2.3.4",
         "symfony/finder": "2.3.4",
         "symfony/yaml": "2.3.4",
         "symfony/process": "2.3.4",
@@ -17,7 +18,8 @@
         "n98/junit-xml": "dev-master",
         "fzaninotto/faker": "1.2.0",
         "composer/composer": "dev-master",
-        "twig/twig": "1.*"
+        "twig/twig": "1.*",
+        "ocramius/proxy-manager": "0.4.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.24"
